# GPU-ArchProg

./: .gitignore  README.md  compute  prog  result_sj1.txt  results.txt  resultsss.txt  sj1_2026temp.cu  sj1_2026temp_improve.cu  solver
Short_job_1/: own_impl.cu  sj1_2026temp_improve.cu  sj1_2026temp_improve_copy.cu
Short_job_2/: ergebnisse.txt  ess  incred_results.txt  sj2_2026temp.cu  sj2_final.cu  test  test_new  try_again.cu
semester_project/: CMakeLists.txt  compare_FFT.cpp  compare_FFT.h  create_plot.py  imporved_parallel_FFT.h  improved_parallel_FFT.cu  main  main.cpp  parallel_FFT.cu  parallel_FFT.h  second_parallel_FFT.cu  second_parallel_FFT.h  sequential_FFT.cpp  sequential_FFT.h  stockham_FFT.cu  stockham_FFT.h
